# OpenIGTLinkIO

./: CMakeLists.txt  OpenIGTLinkIOConfig.cmake.in  README.md  qSlicerOpenIGTLinkIFModule.cxx  qSlicerOpenIGTLinkIFModule.h  qSlicerOpenIGTLinkIFModuleWidget.cxx  qSlicerOpenIGTLinkIFModuleWidget.h
CMake/: vtkMacroPythonWrap.cmake
Codec/: CMakeLists.txt  igtlCodecImage.cxx  igtlCodecImage.h
Converter/: CMakeLists.txt  igtlBaseConverter.cxx  igtlBaseConverter.h  igtlCommandConverter.cxx  igtlCommandConverter.h  igtlImageConverter.cxx  igtlImageConverter.h  igtlPolyDataConverter.cxx  igtlPolyDataConverter.h  igtlStatusConverter.cxx  igtlStatusConverter.h  igtlTransformConverter.cxx  igtlTransformConverter.h  igtlioBaseConverter.cxx  igtlioBaseConverter.h  igtlioCommandConverter.cxx  igtlioCommandConverter.h  igtlioConverterUtilities.cxx  igtlioConverterUtilities.h  igtlioImageConverter.cxx  igtlioImageConverter.h  igtlioImageMetaConverter.cxx  igtlioImageMetaConverter.h  igtlioLabelMetaConverter.cxx  igtlioLabelMetaConverter.h  igtlioNDArrayConverter.cxx  igtlioNDArrayConverter.h  igtlioNDArrayMessageConverter.cxx  igtlioNDArrayMessageConverter.h  igtlioPointConverter.cxx  igtlioPointConverter.h  igtlioPolyDataConverter.cxx  igtlioPolyDataConverter.h  igtlioStatusConverter.cxx  igtlioStatusConverter.h  igtlioStringConverter.cxx  igtlioStringConverter.h  igtlioTrackingDataConverter.cxx  igtlioTrackingDataConverter.h  igtlioTransformConverter.cxx  (+11 more)
Converters/: CMakeLists.txt  vtkIGTLToMRMLBase.h  vtkIGTLToMRMLImage.cxx  vtkIGTLToMRMLImage.h  vtkIGTLToMRMLImageMetaList.cxx  vtkIGTLToMRMLImageMetaList.h  vtkIGTLToMRMLLinearTransform.h  vtkIGTLToMRMLPosition.h  vtkIGTLToMRMLTrackingData.h
Devices/: CMakeLists.txt  igtlioCommandDevice.cxx  igtlioCommandDevice.h  igtlioDevice.cxx  igtlioDevice.h  igtlioImageDevice.cxx  igtlioImageDevice.h  igtlioImageMetaDevice.cxx  igtlioImageMetaDevice.h  igtlioLabelMetaDevice.cxx  igtlioLabelMetaDevice.h  igtlioNDArrayDevice.cxx  igtlioNDArrayDevice.h  igtlioPointDevice.cxx  igtlioPointDevice.h  igtlioPolyDataDevice.cxx  igtlioPolyDataDevice.h  igtlioStatusDevice.cxx  igtlioStatusDevice.h  igtlioStringDevice.cxx  igtlioStringDevice.h  igtlioTrackingDataDevice.cxx  igtlioTrackingDataDevice.h  igtlioTransformDevice.cxx  igtlioTransformDevice.h  igtlioVideoDevice.cxx  igtlioVideoDevice.h  vtkIGTLIOCommandDevice.cxx  vtkIGTLIOCommandDevice.h  vtkIGTLIODevice.cxx  vtkIGTLIODevice.h  vtkIGTLIOImageDevice.cxx  vtkIGTLIOImageDevice.h  vtkIGTLIOStatusDevice.cxx  vtkIGTLIOStatusDevice.h  vtkIGTLIOTransformDevice.cxx  vtkIGTLIOTransformDevice.h
Examples/: CMakeLists.txt
Examples/qIgtlClient/: CMakeLists.txt  main.cpp
GUI/: CMakeLists.txt  qIGTLIOClientWidget.cxx  qIGTLIOClientWidget.h  qIGTLIOCommandWidget.cxx  qIGTLIOCommandWidget.h  qIGTLIOConnectorListWidget.cxx  qIGTLIOConnectorListWidget.h  qIGTLIOConnectorModel.cxx  qIGTLIOConnectorModel.h  qIGTLIOConnectorPropertyWidget.cxx  qIGTLIOConnectorPropertyWidget.h  qIGTLIODeviceAddWidget.cxx  qIGTLIODeviceAddWidget.h  qIGTLIODeviceButtonsWidget.cxx  qIGTLIODeviceButtonsWidget.h  qIGTLIODevicePropertiesWidget.cxx  qIGTLIODevicePropertiesWidget.h  qIGTLIODevicesModel.cxx  qIGTLIODevicesModel.h  qIGTLIODevicesWidget.cxx  qIGTLIODevicesWidget.h  qIGTLIOGuiUtilities.cxx  qIGTLIOGuiUtilities.h  qIGTLIOLogicController.cxx  qIGTLIOLogicController.h  qIGTLIOVtkConnectionMacro.h  qMRMLIGTLConnectorTreeView.cxx  qMRMLIGTLConnectorTreeView.h  qMRMLIGTLConnectorTreeWidget.cxx  qMRMLIGTLConnectorTreeWidget.h  qMRMLIGTLIOModel.cxx  qMRMLIGTLIOModel.h  qMRMLIGTLIOSortFilterProxyModel.cxx  qMRMLIGTLIOSortFilterProxyModel.h  qMRMLIGTLIOTreeView.cxx  qMRMLIGTLIOTreeView.h  qMRMLSceneIGTLConnectorModel.cxx  qMRMLSceneIGTLConnectorModel.h  qSlicerIGTLConnectorPropertyWidget.cxx  qSlicerIGTLIONodeSelectorWidget.cxx  (+3 more)
GUI/DeviceWidgets/: qIGTLIOCommandDeviceWidget.cxx  qIGTLIOCommandDeviceWidget.h  qIGTLIODeviceWidget.cxx  qIGTLIODeviceWidget.h  qIGTLIODeviceWidgetFactory.cxx  qIGTLIODeviceWidgetFactory.h  qIGTLIOGenericDeviceWidget.cxx  qIGTLIOGenericDeviceWidget.h  qIGTLIOStatusDeviceWidget.cxx  qIGTLIOStatusDeviceWidget.h  qIGTLIOStringDeviceWidget.cxx  qIGTLIOStringDeviceWidget.h
Logic/: CMakeLists.txt  IGTLIOUtilities.cxx  IGTLIOUtilities.h  igtlioCircularBuffer.cxx  igtlioCircularBuffer.h  igtlioCircularSectionBuffer.cxx  igtlioCircularSectionBuffer.h  igtlioCommand.cxx  igtlioCommand.h  igtlioConnector.cxx  igtlioConnector.h  igtlioDeviceFactory.cxx  igtlioDeviceFactory.h  igtlioLogic.cxx  igtlioLogic.h  igtlioObject.cxx  igtlioObject.h  igtlioSession.cxx  igtlioSession.h  igtlioUtilities.cxx  igtlioUtilities.h  vtkIGTLIOCircularBuffer.cxx  vtkIGTLIOCircularBuffer.h  vtkIGTLIOConnector.cxx  vtkIGTLIOConnector.h  vtkIGTLIODeviceFactory.cxx  vtkIGTLIODeviceFactory.h  vtkIGTLIOLogic.cxx  vtkIGTLIOLogic.h  vtkIGTLIOObject.cxx  vtkIGTLIOObject.h  vtkIGTLIOSession.cxx  vtkIGTLIOSession.h  vtkSlicerOpenIGTLinkIFLogic.cxx  vtkSlicerOpenIGTLinkIFLogic.h
Logic/Converters/: vtkIGTLToMRMLImage.h  vtkIGTLToMRMLLinearTransform.h  vtkIGTLToMRMLPosition.cxx  vtkIGTLToMRMLTrackingData.h
MRML/: CMakeLists.txt  vtkIGTLCircularBuffer.cxx  vtkIGTLCircularBuffer.h  vtkIGTLToMRMLBase.cxx  vtkIGTLToMRMLBase.h  vtkIGTLToMRMLImage.cxx  vtkIGTLToMRMLImage.h  vtkIGTLToMRMLImageMetaList.cxx  vtkIGTLToMRMLImageMetaList.h  vtkIGTLToMRMLLabelMetaList.cxx  vtkIGTLToMRMLLabelMetaList.h  vtkIGTLToMRMLPoint.cxx  (+39 more)
Testing/: CMakeLists.txt  IGTLIOFixture.cxx  IGTLIOFixture.h  igtlioFixture.cxx  igtlioFixture.h  igtlioTestUtilities.cxx  igtlioTestUtilities.h  testBufferForVideoStream.cxx  testClientServer.cxx  testCommandMessageCodec.cxx  testDeduceToolBasedOnName.cxx  testReceiveImage.cxx  testReceiveVideo.cxx  testSendReceiveCommand.cxx  testSendReceiveCommandWidthCodec.cxx  testSendReceiveCommandWithCodec.cxx
Tools/: CMakeLists.txt  igtlioCommandMessageCodec.cxx  igtlioCommandMessageCodec.h  igtlioTranslator.cxx  igtlioTranslator.h  vtkIGTLIOCommandMessageCodec.cxx  vtkIGTLIOCommandMessageCodec.h  vtkIGTLIOTranslator.cxx  vtkIGTLIOTranslator.h
(+8 files in other folders)
